Update index.html: [Navbar menjadi tetap]

--- a/index.html
+++ b/index.html
@@ -9,20 +9,28 @@
   <body class="bg-secondary">
     <div class="container p-0 mp-4 mt-4 rounded-3 shadow bg-white">
     <!-- Menu -->
-     <nav class="d-md-flex p-4">
-      <div><h1>Toko kaos.</h1></div>
+    <nav class="d-md-flex px-4 position-sticky top-0 bg-black shadow mb-3" style="z-index: 1000;">
+      <div>
+        <h2 class="text-white">Toko kaos.</h2>
+      </div>
       <div class="ms-auto my-auto">
         <ul class="list-inline m-0">
-          <li class="list-inline-item mx-md-3"><a href="#collections" class="text-decoration-none text-dark fw-bold">Produk kami</a></li>
-          <li class="list-inline-item mx-md-3"><a href="#tentang" class="text-decoration-none text-dark fw-bold">Tentang kami</a></li>
-          <li class="list-inline-item mx-md-3"><a href="#order" class="text-decoration-none text-dark fw-bold">Cara order</a></li>
+          <li class="list-inline-item mx-md-3"><a href="#collections" class="text-decoration-none text-white fw-bold">Produk
+              kami</a></li>
+          <li class="list-inline-item mx-md-3"><a href="#tentang" class="text-decoration-none text-white fw-bold">Tentang
+              kami</a></li>
+          <li class="list-inline-item mx-md-3"><a href="#order" class="text-decoration-none text-white fw-bold">Cara
+              order</a></li>
         </ul>
       </div>
-     </nav>
+    </nav>
+
+
      <!--banneer-->
-     <div class="px-4 mb-4">
+    <div class="px-3 mb-3 mt-3">
       <img src="img/web-banner-3.png" class="w-100 rounded-3">
-     </div>
+    </div>
+
      <!--catalog-->
      <h3 class="text-center" id="collections">OUR COLLECTION</h3>
      <div class="text-center w-50 mx-auto fw-light">Selamat datang di koleksi eksklusif Toko Kaos! Di sini, Anda akan menemukan berbagai desain kaos unik yang terinspirasi dari anime, manhwa, dan manhua favorit Anda. Setiap kaos kami dibuat dari bahan cotton combed 24s premium yang lembut dan nyaman dikenakan, dengan desain yang dibuat dengan penuh cinta dan detail. Nikmati pilihan kaos custom kami dengan ukuran yang bervariasi, mulai dari S hingga XL.</div>
