--- a/index.html
+++ b/index.html
@@ -42,7 +42,30 @@
           <div class="card-body">
             <p class="card-text">Tshirt ghostcrew windbreaker.</p>
           </div>
-          <div class="d-none deskripsi"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum perspiciatis, deserunt inventore doloremque sint, mollitia similique ea amet neque modi hic dolorem. Blanditiis vitae doloribus exercitationem delectus cumque quam necessitatibus rem porro voluptatibus iste dolorum, unde doloremque, fugiat eius quod deleniti consequatur neque non nostrum nihil! Neque dolorem ipsam at!</p></div>
+        <div class="d-none deskripsi">
+          <p><strong>Detail Produk:</strong></p>
+          <ul>
+            <li><strong>Bahan:</strong> Cotton Combed 24s (premium)</li>
+            <li><strong>Warna:</strong> Hitam dengan desain putih</li>
+            <li><strong>Ukuran Tersedia:</strong>
+              <ul>
+                <li>S: 48 x 64 cm</li>
+                <li>M: 50 x 66 cm</li>
+                <li>L: 52 x 68 cm</li>
+                <li>XL: 54 x 70 cm</li>
+              </ul>
+            </li>
+            <li><strong>Toleransi ukuran:</strong> 2-4 cm</li>
+            <li><strong>Desain:</strong> Grafis "Ghostcrew Windbreaker" sablon berkualitas tinggi, tidak mudah luntur.</li>
+            <li><strong>Keunggulan:</strong>
+              <ul>
+                <li>Bahan adem dan tidak panas</li>
+                <li>Lembut di kulit</li>
+                <li>Jahitan rapi dan tahan lama</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
           <div class="card-footer d-md-flex">
             <a class="btn btn-sm btn-primary d-block btnDetail">Detail</a>
             <span class="ms-auto text-danger fw-bold d-block text-center harga">Rp86.000,00</span>
@@ -176,11 +199,10 @@
           <img src="img/order.png" align="right" style="width: 100px; height: auto;" class="ms-3 mb-3">
           Mau pesan kaos dari Toko kaos? Gampang banget!<br><br>
           1. Pilih desain dan ukuran kaos yang Anda suka dari koleksi kami.<br>
-          2. Screenshot produk yang ingin dipesan.<br>
-          3. Hubungi kami via WhatsApp di [Nomor WhatsApp Anda].<br>
-          4. Kirimkan screenshot dan detail pesanan Anda (nama, alamat, ukuran, dan jumlah).<br>
-          5. Kami akan segera mengonfirmasi pesanan Anda dan menginformasikan total pembayaran.<br>
-          6. Setelah pembayaran, pesanan akan segera diproses!
+          2. Klik produk yang Anda inginkan, dan Anda akan otomatis diarahkan ke WhatsApp.<br>
+          3. Kirimkan detail tambahan seperti nama, alamat, ukuran, dan jumlah.<br>
+          4. Kami akan segera mengonfirmasi pesanan Anda dan menginformasikan total pembayaran.<br>
+          5. Setelah pembayaran, pesanan akan segera diproses!
         </p>
       </div>
     </div>
